Fixed spacing

--- a/Web Summarizer/css/proSummarizer.css
+++ b/Web Summarizer/css/proSummarizer.css
@@ -428,7 +428,7 @@ h1 {
 
 .sumResultDiv {
     width: 44vw;
-    height: 9vw;
+    height: 6.5vw;
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
